--- a/package.json
+++ b/package.json
@@ -3,15 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
     "@hookform/resolvers": "^2.8.8",
+    "@mapbox/node-pre-gyp": "^1.0.9",
+    "@mui/icons-material": "^5.6.0",
     "@mui/material": "^5.6.0",
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
-    "material-ui-phone-number": "^3.0.0",
     "react": "^18.0.0",
     "react-dnd": "^16.0.0",
     "react-dnd-html5-backend": "^16.0.0",
@@ -21,8 +20,7 @@
     "react-redux": "^7.2.8",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4",
-    "yup": "^0.32.11",
-    "yup-phone": "^1.3.2"
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
