--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
         "react-dnd": "^16.0.0",
         "react-dnd-html5-backend": "^16.0.0",
         "react-dom": "^18.0.0",
+        "react-dotenv": "^0.1.3",
         "react-hook-form": "^7.29.0",
         "react-redux": "^7.2.8",
         "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.0",
+        "use-double-tap": "^1.3.3",
         "yup": "^0.32.11"
     },
     "scripts": {
